--- a/donate.html
+++ b/donate.html
@@ -14,10 +14,10 @@
 
     <div class="omega">
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="issue.html">The Issue</a>
-        <a href="donate.html">Donate</a>
-        <a href="other.html">Other Orgs</a>
+        <a href="index.html" class="navhome">Home</a>
+        <a href="issue.html" class="navhome">The Issue</a>
+        <a href="donate.html" class="navhome">Donate</a>
+        <a href="other.html" class="navhome">Other Orgs</a>
     </div>
     
     </div>
